# HexeVoice

./: .gitignore  .gitmodules  README.md  compose.faster-whisper-stt.cuda.yaml  compose.faster-whisper-stt.yaml  compose.openwakeword.yaml  compose.piper-tts.yaml  install.sh  pyproject.toml  requirements.txt  uninstall.sh
config/: runtime-dirs.json
docs/: Expressif box.yaml  New_tasks.txt  Reasoning.txt  architecture.md  completed.txt  core-rendered-node-ui-pilot.md  endpoint-sd-media-contract.md  endpoint-ui-composition.md  feature-spec.md  firmware-baseline.md  firmware-migration-plan.md  firmware-ota.md  firmware-release-artifacts.md  local-tts-runtime.md  openwakeword-runtime.md  operations.md  phase2-operator-release-checklist.md  provider-setup.md  runtime-state-policy.md  setup.md  setup_re-desing.txt  stt-grammar-hotphrase-evaluation.md  stt-intent-first-fallback.md  stt-streaming-evaluation.md  supervised-openwakeword-validation.md  task-details.md  third-party-licenses.md  tts-engine-evaluation.md  voice-event-envelope.md  voice-intent-registration.md  voice-loop-phase-1-handoff.md  voice-node-phase-0-baseline.md  voice-node-phase-1.md  voice-node-roadmap.md  voice-pe-led-ring.md
docs/archive/: README.md
docs/json-chemas-intents/: README.md  intent-registration.schema.json  reply-audio-sidecar.schema.json
docs/task-061-json-schemas/: README.md  endpoint-command-ack-payload.schema.json  endpoint-command-error-payload.schema.json  endpoint-ota-update-payload.schema.json  endpoint-volume-command-payload.schema.json  voice-audio-chunk-payload.schema.json  voice-event-envelope.schema.json  voice-session-start-payload.schema.json
docs/voice-event-envelope/: backend-volume-command.example.json  (+6 more)
firmware/: CMakeLists.txt  README.md  build.sh  export-artifacts.sh  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.cpp  app_state.cpp  app_state.h  idf_component.yml
firmware/main/assets/: error_rgb565.h  idle_rgb565.h  listening_rgb565.h  logo_rgb565.h  talk_rgb565.h  thinking_rgb565.h  work_rgb565.h
firmware/main/board/: audio.cpp  audio.h  audio_ha_voice_pe.cpp  buttons.cpp  buttons.h  buttons_ha_voice_pe.cpp  display.cpp  display.h  display_none.cpp  led_ring.cpp  led_ring.h  led_ring_ha_voice_pe.cpp  pins.h  storage.cpp  storage.h  storage_nvs_only.cpp  touch.cpp  touch.h  touch_none.cpp  wifi.cpp  wifi.h
firmware/main/secrets/: wifi_secrets.example.h
firmware/main/system/: clock.cpp  clock.h  log_stream.cpp  log_stream.h  ota.cpp  ota.h  power.cpp  power.h  settings.cpp  settings.h  telemetry.cpp  telemetry.h
firmware/main/ui/: animator.cpp  animator.h  screens.cpp  screens.h
firmware/main/voice/: assistant_client.cpp  assistant_client.h  backend_client.cpp  backend_client.h  stt_stream.cpp  stt_stream.h  tts_player.cpp  tts_player.h  tts_player_ha_voice_pe.cpp  tts_player_noop.cpp  wake_word.cpp  wake_word.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
runtime/: endpoint_registry.json  voice_intents.json  voice_session_history.json  voice_tts_settings.json
scripts/: benchmark-stt.py  bootstrap.sh  download-stt-samples.py  faster-whisper-stt-control.sh  firmware-artifacts-control.sh  hostname-alias-control.sh  migration-backup.py  migration-preflight.py  monitor-firmware-udp.sh  openwakeword-control.sh  openwakeword.env.example  piper-tts-control.sh  piper-tts.env.example  post-install-smoke-test.py  prepare-runtime-dirs.sh  rebuild-ui.sh  restart-stack.sh  run-from-env.sh  runtime-state-status.sh  set-micro-vad-pause.sh  setup-runner.sh  simulate-pe-led.sh  stack-control.sh  stack.env.example  start-dev-stack.sh  stt-cuda-preflight.py  verify-post-complete-lifecycle.py
services/: __init__.py
tests/: test_api.py  test_approval_polling.py  test_benchmark_stt_script.py  test_bootstrap_discovery.py  test_config.py  test_domain_events.py  test_endpoint_registry.py  test_firmware_artifacts_control_script.py  test_firmware_endpoint_config.py  test_firmware_voice_envelope.py  test_hostname_alias_control_script.py  test_image_converter.py  test_intent_regressions.py  test_local_intents.py  test_node_migration.py  test_node_ui_pilot.py  test_onboarding.py  test_openwakeword_control_script.py  test_persistence.py  test_phase2.py  test_piper_tts_control_script.py  test_piper_tts_service.py  test_post_complete_lifecycle_script.py  test_post_install_smoke_test.py  test_prepare_runtime_dirs.py  test_provider_boundary.py  test_provider_setup.py  test_readiness.py  test_runtime_state_status_script.py  test_scheduler.py  test_session_start.py  test_setup_bootstrap_status.py  test_setup_capabilities.py  test_setup_core_migration.py  test_setup_host_readiness.py  test_setup_providers.py  test_setup_ready.py  test_setup_reauth.py  test_stt_control_script.py  test_stt_service.py  (+12 more)
(+181 files in other folders)
